--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -10,3 +10,12 @@ services:
             - '@contao.routing.scope_matcher'
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+
+
+    numero2.purgeContaoTagsCommand:
+        class: numero2\TagsBundle\Command\PurgeContaoTagsCommand
+        public: true
+        arguments:
+            - '@contao.framework'
+        tags:
+            - { name: console.command }
